--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,53 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+    />
     <title>Ashley Williams</title>
   </head>
   <body>
+    <section id="about">
+      <div>
+        <img src="../assets/main-pic.jpg" alt="" />
+        <h1>Ashley Williams</h1>
+      </div>
+      <div>
+        <h1>About Me</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <div>
+          <a href="">
+            <i class="devicon-github-original"></i>
+          </a>
+          <a href="">
+            <i class="devicon-linkedin-plain"></i>
+          </a>
+          <a href="">
+            <i class="devicon-twitter-original"></i>
+          </a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
