--- a/src/index.html
+++ b/src/index.html
@@ -29,34 +29,171 @@
     <title>Ashley Williams</title>
   </head>
   <body>
-    <section id="about">
-      <div>
-        <img src="../assets/main-pic.jpg" alt="" />
-        <h1>Ashley Williams</h1>
-      </div>
-      <div>
-        <h1>About Me</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <div>
-          <a href="">
-            <i class="devicon-github-original"></i>
-          </a>
-          <a href="">
-            <i class="devicon-linkedin-plain"></i>
-          </a>
-          <a href="">
-            <i class="devicon-twitter-original"></i>
-          </a>
+    <main>
+        <div class="background-shape">
+          <div></div>
         </div>
-      </div>
-    </section>
+        <section id="about">
+          <div class="personal">
+            <img src="../assets/main-pic.jpg" alt="" />
+            <h1>Ashley Williams</h1>
+          </div>
+          <div class="description">
+            <h1>About Me</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+              minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+              aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+              pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+              culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <div class="links">
+              <a href="https://github.com/">
+                <i class="devicon-github-original link-icon"></i>
+              </a>
+              <a href="https://www.linkedin.com/">
+                <i class="devicon-linkedin-plain link-icon"></i>
+              </a>
+              <a href="https://x.com/">
+                <i class="devicon-twitter-original link-icon"></i>
+              </a>
+            </div>
+          </div>
+        </section>
+        <section id="work">
+          <h1>My Work</h1>
+          <div class="work-card">
+            <div class="image-placeholder">
+              <h1>screenshot of project</h1>
+            </div>
+            <div class="title-row">
+              <h2>Project Name</h2>
+              <a href="https://github.com/">
+                <i class="devicon-github-original link-icon"></i>
+              </a>
+              <a href="#work">
+                <img src="../assets/open-in-new.svg" alt="" class="link-icon" />
+              </a>
+            </div>
+            <p>
+              Short description of the project. Just a couple sentences will do.
+            </p>
+          </div>
+          <div class="work-card">
+            <div class="image-placeholder">
+              <h1>screenshot of project</h1>
+            </div>
+            <div class="title-row">
+              <h2>Project Name</h2>
+              <a href="https://github.com/">
+                <i class="devicon-github-original link-icon"></i>
+              </a>
+              <a href="#work">
+                <img src="../assets/open-in-new.svg" alt="" class="link-icon" />
+              </a>
+            </div>
+            <p>
+              Short description of the project. Just a couple sentences will do.
+            </p>
+          </div>
+          <div class="work-card">
+            <div class="image-placeholder">
+              <h1>screenshot of project</h1>
+            </div>
+            <div class="title-row">
+              <h2>Project Name</h2>
+              <a href="https://github.com/">
+                <i class="devicon-github-original link-icon"></i>
+              </a>
+              <a href="#work">
+                <img src="../assets/open-in-new.svg" alt="" class="link-icon" />
+              </a>
+            </div>
+            <p>
+              Short description of the project. Just a couple sentences will do.
+            </p>
+          </div>
+          <div class="work-card">
+            <div class="image-placeholder">
+              <h1>screenshot of project</h1>
+            </div>
+            <div class="title-row">
+              <h2>Project Name</h2>
+              <a href="https://github.com/">
+                <i class="devicon-github-original link-icon"></i>
+              </a>
+              <a href="#work">
+                <img src="../assets/open-in-new.svg" alt="" class="link-icon" />
+              </a>
+            </div>
+            <p>
+              Short description of the project. Just a couple sentences will do.
+            </p>
+          </div>
+          <div class="work-card">
+            <div class="image-placeholder">
+              <h1>screenshot of project</h1>
+            </div>
+            <div class="title-row">
+              <h2>Project Name</h2>
+              <a href="https://github.com/">
+                <i class="devicon-github-original link-icon"></i>
+              </a>
+              <a href="#work">
+                <img src="../assets/open-in-new.svg" alt="" class="link-icon" />
+              </a>
+            </div>
+            <p>
+              Short description of the project. Just a couple sentences will do.
+            </p>
+          </div>
+          <div class="work-card">
+            <div class="image-placeholder">
+              <h1>screenshot of project</h1>
+            </div>
+            <div class="title-row">
+              <h2>Project Name</h2>
+              <a href="https://github.com/">
+                <i class="devicon-github-original link-icon"></i>
+              </a>
+              <a href="#work">
+                <img src="../assets/open-in-new.svg" alt="" class="link-icon" />
+              </a>
+            </div>
+            <p>
+              Short description of the project. Just a couple sentences will do.
+            </p>
+          </div>
+        </section>
+        <section id="contact">
+          <h1>Contact me</h1>
+          <p>
+            Please get in touch if you think our work could be mutually beneficial!
+          </p>
+          <div class="small-text">
+            <p>1234 Random Road</p>
+            <p>Random Town, California 12345</p>
+          </div>
+          <div class="small-text">555-555-5555</div>
+          <div class="small-text">ashleywilliams.is.not.real@gmail.com</div>
+          <div class="links">
+            <a href="https://github.com/">
+              <i class="devicon-github-original link-icon"></i>
+            </a>
+            <a href="https://www.linkedin.com/">
+              <i class="devicon-linkedin-plain link-icon"></i>
+            </a>
+            <a href="https://x.com/">
+              <i class="devicon-twitter-original link-icon"></i>
+            </a>
+          </div>
+          </div>
+        </section>
+    </main>
+    <footer>
+        <img src="../assets/second-pic.jpg" alt="">
+    </footer>
   </body>
 </html>
