--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
         <section id="about">
             <img src="../assets/main-pic.jpg" alt="" />
             <h2>Ashley Williams</h1>
+                <div class="background"></div>
             <h1>About Me</h1>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
