completed tablet about section

--- a/src/index.html
+++ b/src/index.html
@@ -36,28 +36,30 @@
         <section id="about">
             <img src="../assets/main-pic.jpg" alt="" />
             <h2>Ashley Williams</h1>
-                <div class="background"></div>
-            <h1>About Me</h1>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-              minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-              aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-              pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <div class="links">
-              <a href="https://github.com/">
-                <i class="devicon-github-original link-icon"></i>
-              </a>
-              <a href="https://www.linkedin.com/">
-                <i class="devicon-linkedin-plain link-icon"></i>
-              </a>
-              <a href="https://x.com/">
-                <i class="devicon-twitter-original link-icon"></i>
-              </a>
-          </div>
+                <div class="content">
+                    <div class="border"></div>
+                <h1>About Me</h1>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                  minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip ex ea commodo consequat. Duis aute irure dolor in
+                  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                  culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+                <div class="links">
+                  <a href="https://github.com/">
+                    <i class="devicon-github-original link-icon"></i>
+                  </a>
+                  <a href="https://www.linkedin.com/">
+                    <i class="devicon-linkedin-plain link-icon"></i>
+                  </a>
+                  <a href="https://x.com/">
+                    <i class="devicon-twitter-original link-icon"></i>
+                  </a>
+                          </div>
+            </div>
         </section>
         <section id="work">
           <h1>My Work</h1>
