tweaked font size in tablet

--- a/src/index.html
+++ b/src/index.html
@@ -167,32 +167,32 @@
           </div>
         </section>
         <section id="contact">
-          <h1>Contact me</h1>
-          <p>
-            Please get in touch if you think our work could be mutually beneficial!
-          </p>
-          <div class="small-text">
-            <p>1234 Random Road</p>
-            <p>Random Town, California 12345</p>
+          <div class="details">
+              <h1>Contact me</h1>
+              <p>
+                Please get in touch if you think our work could be mutually beneficial!
+              </p>
+              <div class="small-text">
+                <p>1234 Random Road</p>
+                <p>Random Town, California 12345</p>
+              </div>
+              <div class="small-text">555-555-5555</div>
+              <div class="small-text">ashleywilliams.is.not.real@gmail.com</div>
+              <div class="links">
+                <a href="https://github.com/">
+                  <i class="devicon-github-original link-icon"></i>
+                </a>
+                <a href="https://www.linkedin.com/">
+                  <i class="devicon-linkedin-plain link-icon"></i>
+                </a>
+                <a href="https://x.com/">
+                  <i class="devicon-twitter-original link-icon"></i>
+                </a>
+              </div>
+              </div>
           </div>
-          <div class="small-text">555-555-5555</div>
-          <div class="small-text">ashleywilliams.is.not.real@gmail.com</div>
-          <div class="links">
-            <a href="https://github.com/">
-              <i class="devicon-github-original link-icon"></i>
-            </a>
-            <a href="https://www.linkedin.com/">
-              <i class="devicon-linkedin-plain link-icon"></i>
-            </a>
-            <a href="https://x.com/">
-              <i class="devicon-twitter-original link-icon"></i>
-            </a>
-          </div>
-          </div>
+          <img src="../assets/second-pic.jpg" alt="">
         </section>
     </main>
-    <footer>
-        <img src="../assets/second-pic.jpg" alt="">
-    </footer>
   </body>
 </html>
