changed img urls

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </div>
         <section id="about">
             <img 
-            srcset="/assets/main-pic480.jpg 480w, /assets/main-pic300.jpg 300w"
+            srcset="assets/main-pic480.jpg 480w, assets/main-pic300.jpg 300w"
             sizes="480px, 300px"
-            src="/assets/main-pic300.jpg" 
+            src="assets/main-pic300.jpg" 
             alt="" 
             />
             <h2>Ashley Williams</h1>
@@ -78,7 +78,7 @@
                 <i class="devicon-github-original link-icon"></i>
               </a>
               <a href="#work">
-                <img src="/assets/open-in-new.svg" alt="" class="link-icon" />
+                <img src="assets/open-in-new.svg" alt="" class="link-icon" />
               </a>
             </div>
             <p>
@@ -95,7 +95,7 @@
                 <i class="devicon-github-original link-icon"></i>
               </a>
               <a href="#work">
-                <img src="/assets/open-in-new.svg" alt="" class="link-icon" />
+                <img src="assets/open-in-new.svg" alt="" class="link-icon" />
               </a>
             </div>
             <p>
@@ -112,7 +112,7 @@
                 <i class="devicon-github-original link-icon"></i>
               </a>
               <a href="#work">
-                <img src="/assets/open-in-new.svg" alt="" class="link-icon" />
+                <img src="assets/open-in-new.svg" alt="" class="link-icon" />
               </a>
             </div>
             <p>
@@ -129,7 +129,7 @@
                 <i class="devicon-github-original link-icon"></i>
               </a>
               <a href="#work">
-                <img src="/assets/open-in-new.svg" alt="" class="link-icon" />
+                <img src="assets/open-in-new.svg" alt="" class="link-icon" />
               </a>
             </div>
             <p>
@@ -146,7 +146,7 @@
                 <i class="devicon-github-original link-icon"></i>
               </a>
               <a href="#work">
-                <img src="/assets/open-in-new.svg" alt="" class="link-icon" />
+                <img src="assets/open-in-new.svg" alt="" class="link-icon" />
               </a>
             </div>
             <p>
@@ -163,7 +163,7 @@
                 <i class="devicon-github-original link-icon"></i>
               </a>
               <a href="#work">
-                <img src="/assets/open-in-new.svg" alt="" class="link-icon" />
+                <img src="assets/open-in-new.svg" alt="" class="link-icon" />
               </a>
             </div>
             <p>
@@ -196,11 +196,11 @@
               </div>
               </div>
           </div>
-          <!-- <img src="/assets/second-pic-normal.jpg" alt=""> -->
+          <!-- <img src="assets/second-pic-normal.jpg" alt=""> -->
           <picture>
-            <source media="(min-width: 1000px)" srcset="/assets/second-pic-normal.jpg">
-            <source media="(min-width: 700px) and (max-width: 999px)" srcset="/assets/second-pic-tablet.jpg">
-            <img src="/assets/second-pic-normal.jpg" alt="">
+            <source media="(min-width: 1000px)" srcset="assets/second-pic-normal.jpg">
+            <source media="(min-width: 700px) and (max-width: 999px)" srcset="assets/second-pic-tablet.jpg">
+            <img src="assets/second-pic-normal.jpg" alt="">
           </picture>
         </section>
     </main>
